--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: booking-service
+    name: user-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://${DB_HOST:localhost:5432}/${DB_NAME:dbair_tia}
@@ -15,13 +15,4 @@ spring:
       ddl-auto: update
     open-in-view: false
 server:
-  port: ${SERVER_PORT:8086}
-feign:
-  flights:
-    info:
-      id: flight-service
-      url: http://localhost:8085/api/vuelos
-  user:
-    info:
-      id: user-service
-      url: http://localhost:8087/api/usuarios
+  port: ${SERVER_PORT:8087}
