--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -23,3 +23,8 @@ spring:
     open-in-view: false
 server:
   port: ${SERVER_PORT:8087}
+feign:
+  booking:
+    info:
+      id: booking-service
+      url: http://localhost:8086/api/reservas
